<resources>
    <string name="app_name">zanzo</string>

    <!-- Layout -->
    <string name="content_description_icon">App Icon</string>
    <string name="content_description_background">No Video Data</string>
    <string name="content_description_gallery">Select Video</string>
    <string name="content_description_play">Play Video</string>
    <string name="content_description_stop">Stop Video</string>
    <string name="content_description_speed_up">Speed Up</string>
    <string name="content_description_speed_down">Speed Down</string>
    <string name="content_description_next_frame">To Next Frame</string>
    <string name="content_description_previous_frame">To Previous Frame</string>
    <string name="content_description_move_after">Move After</string>
    <string name="content_description_move_before">Move Before</string>
    <string name="content_description_frame_control_area">Frame Control Area</string>
    <string name="content_description_rotate">Rotate Clockwise</string>
    <string name="content_description_paint">Paint Mode</string>
    <string name="content_description_capture">Video Capture</string>
    <string name="content_description_player">Video Player Mode</string>
    <string name="content_description_view_lock">View Resize Lock/Unlock</string>
    <string name="content_description_back">Back</string>
    <string name="content_description_motion_image">Generate Motion Image</string>
    <string name="content_description_motion_result">Motion Image</string>
    <string name="content_description_motion_shadow">Shadow Image</string>
    <string name="current_time_init">00:00:000</string>
    <string name="remain_time_init">--:--:---</string>
    <string-array name="play_speed_text">
        <item>x1/10</item>
        <item>x1/8</item>
        <item>x1/4</item>
        <item>x1/2</item>
        <item>x1/1</item>
    </string-array>
    <string name="label_move_after">10秒進む</string>
    <string name="label_move_before">10秒戻る</string>

    <string name="content_description_paint_undo">戻る</string>
    <string name="content_description_paint_redo">進む</string>
    <string name="content_description_paint_grid">枠線</string>
    <string name="content_description_paint_line">直線</string>
    <string name="content_description_paint_rect">矩形</string>
    <string name="content_description_paint_round">円</string>
    <string name="content_description_paint_path">フリーハンド</string>
    <string name="content_description_paint_erase">クリア</string>
    <string name="content_description_color_white">白</string>
    <string name="content_description_color_red">赤</string>
    <string name="content_description_color_green">緑</string>
    <string name="content_description_color_blue">青</string>
    <string name="content_description_color_yellow">黄色</string>
    <string name="content_description_color_black">黒</string>

    <!-- Toast -->
    <string name="toast_no_permission_ext_read">動画を選択できません。\n外部ストレージへのアクセス権を許可して下さい。</string>
    <string name="toast_no_video">動画を取得できませんでした。</string>
    <string name="toast_no_permission_ext_write">外部ストレージへの書き込み権限を許可して下さい</string>
    <string name="toast_no_motion_image">残像画像を取得できませんでした。</string>
    <string name="toast_cannot_access_network">インターネットに接続できませんでした。\nネットワーク設定を確認して頂き、接続した状態でアプリを起動して下さい。</string>

    <!-- Motion Generator -->
    <string name="description_motion">残像画像を作成します。\n使用するフレーム数を設定して下さい。</string>
    <string name="button_generate_motion_image">画像作成開始</string>
    <string name="button_generate_cancel">キャンセル</string>
    <string name="text_frame_count">フレーム数：</string>
    <string name="progress_message">少々お待ちください。</string>

</resources>
