<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_video_controller"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000">

    <LinearLayout
        android:id="@+id/layout_option_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Gallery Button -->
        <ImageView
            android:id="@+id/button_gallery"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:clickable="true"
            android:contentDescription="@string/content_description_gallery"
            android:focusable="true"
            android:onClick="onButtonClicked"
            android:src="@drawable/button_gallery"
            android:visibility="visible" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Motion Button -->
                <ImageView
                    android:id="@+id/button_motion_image"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:contentDescription="@string/content_description_motion_image"
                    android:focusable="true"
                    android:onClick="onButtonClicked"
                    android:src="@drawable/mode_motion"
                    android:visibility="invisible" />

                <!-- Paint Button -->
                <ImageView
                    android:id="@+id/button_paint"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:contentDescription="@string/content_description_paint"
                    android:focusable="true"
                    android:onClick="onButtonClicked"
                    android:src="@drawable/button_paint"
                    android:visibility="invisible" />

            </LinearLayout>

            <!-- Lock Button -->
            <ImageView
                android:id="@+id/button_lock"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:clickable="true"
                android:contentDescription="@string/content_description_view_lock"
                android:focusable="true"
                android:onClick="onButtonClicked"
                android:src="@drawable/video_unlock"
                android:visibility="invisible" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_paint_tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:orientation="vertical">

                <!-- Move Before -->
                <ImageView
                    android:id="@+id/button_move_before"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="5dp"
                    android:clickable="false"
                    android:contentDescription="@string/content_description_move_before"
                    android:focusable="true"
                    android:onClick="onButtonClicked"
                    android:src="@drawable/button_move_before"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/label_move_before"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="5dp"
                    android:text="@string/label_move_before"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:visibility="invisible" />

            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:orientation="vertical">

                <!-- Move After -->
                <ImageView
                    android:id="@+id/button_move_after"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="5dp"
                    android:clickable="false"
                    android:contentDescription="@string/content_description_move_after"
                    android:focusable="true"
                    android:onClick="onButtonClicked"
                    android:src="@drawable/button_move_after"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/label_move_after"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="5dp"
                    android:text="@string/label_move_after"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:visibility="invisible" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_frame_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <!-- Previous Frame Button -->
            <ImageView
                android:id="@+id/button_previous_frame"
                android:layout_width="25dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_marginVertical="5dp"
                android:layout_marginStart="10dp"
                android:clickable="false"
                android:contentDescription="@string/content_description_previous_frame"
                android:focusable="true"
                android:onClick="onButtonClicked"
                android:src="@drawable/button_previous_frame"
                android:visibility="invisible" />

            <!-- Frame Control Area -->
            <jp.mydns.dego.motionchecker.View.FrameControlAreaView
                android:id="@+id/frame_control_area"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/content_description_frame_control_area"
                android:scaleType="fitXY"
                android:src="@drawable/frame_control_area"
                android:visibility="invisible" />

            <!-- Next Frame -->
            <ImageView
                android:id="@+id/button_next_frame"
                android:layout_width="25dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginVertical="5dp"
                android:layout_marginEnd="10dp"
                android:clickable="false"
                android:contentDescription="@string/content_description_next_frame"
                android:focusable="true"
                android:onClick="onButtonClicked"
                android:src="@drawable/button_next_frame"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_playtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_current_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/current_time_init"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:visibility="invisible" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/text_view_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:visibility="invisible" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/text_view_remain_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/remain_time_init"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:visibility="invisible" />

        </LinearLayout>

        <jp.mydns.dego.motionchecker.View.VideoProgressBar
            android:id="@+id/seek_bar_playtime"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/layout_control_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <!-- Speed Down -->
            <ImageView
                android:id="@+id/button_speed_down"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:clickable="false"
                android:contentDescription="@string/content_description_speed_down"
                android:focusable="true"
                android:onClick="onButtonClicked"
                android:src="@drawable/button_speed_down"
                android:visibility="invisible" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <!-- Stop -->
            <ImageView
                android:id="@+id/button_stop"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:clickable="false"
                android:contentDescription="@string/content_description_stop"
                android:focusable="true"
                android:onClick="onButtonClicked"
                android:src="@drawable/button_video_stop"
                android:visibility="invisible" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <!-- Play/Pause -->
            <ImageView
                android:id="@+id/button_play"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:clickable="false"
                android:contentDescription="@string/content_description_play"
                android:focusable="true"
                android:onClick="onButtonClicked"
                android:src="@drawable/button_video_play"
                android:visibility="invisible" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <!-- Speed Up -->
            <ImageView
                android:id="@+id/button_speed_up"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:clickable="false"
                android:contentDescription="@string/content_description_speed_up"
                android:focusable="true"
                android:onClick="onButtonClicked"
                android:src="@drawable/button_speed_up"
                android:visibility="invisible" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
