<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_motion_generator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_option_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Back Button -->
        <ImageView
            android:id="@+id/button_back"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:clickable="true"
            android:contentDescription="@string/content_description_back"
            android:focusable="true"
            android:onClick="onButtonClicked"
            android:src="@drawable/button_player"
            android:visibility="visible" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_motion_generate"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onButtonClicked"
            android:text="@string/button_generate_motion_image"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_motion_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/description_motion"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_motion_frame_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/text_frame_count"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/seek_bar_frame_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="20dp"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
